<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">
    <ImageView
        android:id="@+id/imgBtn"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_1"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/sample_image"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="4dp"
        android:layout_marginTop="8dp"

        >
        <ImageButton
            android:id="@+id/btnChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/change"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/baseline_360_24"
            android:background="@drawable/btn_background"
            android:layout_marginHorizontal="6dp"
            />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/close"
            android:background="@drawable/btn_background"
            android:layout_marginHorizontal="6dp"
            />

    </LinearLayout>

</LinearLayout>